// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction co 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction conta 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction contai 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction contains  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction parameters contains less rows than the data one 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction parameters contains more rows than the data one 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction parameters contains more rows than the data one 2`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instruction parameters is missing 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
  [
    5.166666666666667,
    -19.833333333333336,
    30.16666666666667,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain   1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain so  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain som  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain some  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain someth  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain somethi  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something e  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something els  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else t  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else th  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else tha  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than   1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than ""  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "C" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "Chan" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "Change l" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "Change li" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "Change limit" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contain something else than "Change limits" 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Allows to compute different process using "Change limits" instruction Doesnt fail if the instructions contains  1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
  [
    1,
    1,
    1,
    "",
    "",
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart Directly with an array of values 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.2,
    81.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    81.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.5,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    80.9,
    80.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
  ],
]
`;

exports[`Compute the data for a Process Behavior Chart With an array of array of one value 1`] = `
[
  [
    "AVERAGE",
    "LOWER_NATURAL_PROCESS_LIMIT",
    "UPPER_NATURAL_PROCESS_LIMIT",
    "RULE_1",
    "RULE_2",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    81.6,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    81.8,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.7,
    81.7,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.2,
    81.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.6,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.8,
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    "",
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    81.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.5,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82.2,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    "",
    82,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    80.9,
    80.9,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.3,
    81.3,
  ],
  [
    82.59,
    81.8512293144208,
    83.3287706855792,
    81.4,
    81.4,
  ],
]
`;
